apps/argo-cd/argocd-to-authelia.yaml
---
# ArgoCD to Authelia Network Policy
# Allows ArgoCD Server to authenticate users via Authelia SSO
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-to-authelia
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  egress:
  # Allow ArgoCD Server to reach Authelia for SSO authentication
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/name: authelia
        k8s:io.kubernetes.pod.namespace: authelia
    toPorts:
    - ports:
      - port: '80'
        protocol: TCP
      - port: '9091'
        protocol: TCP
