apps/argo-cd/k8s.np.argocd-applicationset-controller.yaml
---
# ArgoCD ApplicationSet Controller Network Policy
# Allows applicationset-controller to manage ApplicationSets
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-applicationset-controller
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-applicationset-controller
  ingress:
  # Allow internal health checks and metrics
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: argocd
    toPorts:
    - ports:
      - port: '7000'
        protocol: TCP
      - port: '8080'
        protocol: TCP
  # Allow Prometheus to scrape metrics
  - fromEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/name: prometheus
        k8s:io.kubernetes.pod.namespace: monitoring
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
  egress:
  # Allow Kubernetes API access
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: '6443'
        protocol: TCP
      - port: '443'
        protocol: TCP
  # Allow external SCM providers (for Git generators)
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
