apps/argo-cd/k8s.np.argocd-notifications-controller.yaml
---
# ArgoCD Notifications Controller Network Policy
# Allows notifications-controller to send notifications to external services
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-notifications-controller
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-notifications-controller
  ingress:
  # Allow internal health checks and metrics
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: argocd
    toPorts:
    - ports:
      - port: '9001'
        protocol: TCP
  # Allow Prometheus to scrape metrics
  - fromEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/name: prometheus
        k8s:io.kubernetes.pod.namespace: monitoring
    toPorts:
    - ports:
      - port: '9001'
        protocol: TCP
  egress:
  # Allow DNS resolution
  - toEndpoints:
    - matchLabels:
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
      - port: '53'
        protocol: TCP
  # Allow Kubernetes API access
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: '6443'
        protocol: TCP
      - port: '443'
        protocol: TCP
  # Allow external notification services (Slack, email servers, webhooks, etc.)
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
      - port: '587'
        protocol: TCP
      - port: '465'
        protocol: TCP
      - port: '25'
        protocol: TCP
