apps/argo-cd/k8s.np.argocd-redis-init.yaml
---
# ArgoCD Redis-init Network Policy
# Allows Redis-init access to ArgoCD redis
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-redis-init
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis-secret-init
  egress:
  # Allow kubernetes api access
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: '6443'
        protocol: TCP
      - port: '443'
        protocol: TCP
