apps/argo-cd/k8s.np.argocd-repo-server.yaml
---
# ArgoCD Repo Server Network Policy
# Allows repo-server to fetch from Git and be accessed by server and application-controller
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  ingress:
  # Allow ArgoCD Server to reach repo-server
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: argocd-server
        k8s:io.kubernetes.pod.namespace: argocd
    toPorts:
    - ports:
      - port: '8081'
        protocol: TCP
  # Allow application-controller to reach repo-server
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: argocd-application-controller
        k8s:io.kubernetes.pod.namespace: argocd
    toPorts:
    - ports:
      - port: '8081'
        protocol: TCP
  # Allow applicationset-controller to reach repo-server
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: argocd-applicationset-controller
        k8s:io.kubernetes.pod.namespace: argocd
    toPorts:
    - ports:
      - port: '8081'
        protocol: TCP
  # Allow internal health checks
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: argocd
  egress:
  # Allow Git repository access (GitHub, GitLab, etc.)
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
      - port: '22'
        protocol: TCP
